--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -1,7 +1,7 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-flash" id="flash">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 mb-3 border-bottom">
-        <h1 class="h2" data-i18n="firmware_update.content.system"></h1>
+        <h1 class="h2" data-i18n="firmware_update.content.firmware_update"></h1>
     </div>
 
     <form method='POST' action='#' enctype='multipart/form-data' id='upload_firmware_form'>
@@ -56,21 +56,6 @@
             </div>
         </div>
     </form>
-    <hr>
-    <div class="form-group row">
-        <div class="col-md-12 col-lg-3">
-            <button id="load_event_log" type="button" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.load_event_log"></button>
-            <label for='load_event_log' data-i18n="firmware_update.content.load_event_log_desc"></label>
-            <a id="save_event_log" href="/event_log" class="form-control btn btn-primary mt-2 mb-1" data-i18n="firmware_update.content.save_event_log" download="event_log.txt"></a>
-            <label for='save_event_log' data-i18n="firmware_update.content.save_event_log_desc" class="mb-3"></label>
-            <a id="download_debug_report" href="/debug_report" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.debug_report" download="debug_report.txt"></a>
-            <label id="spiffs_label" for='debug_report' data-i18n="firmware_update.content.debug_report_desc"></label>
-        </div>
-        <div class="col-xl-7 col-lg-9 col-md-12">
-            <textarea class="text-monospace mb-1 form-control" placeholder="Event-Log..." readonly id="event_log" rows="10" style="width: 100%; white-space: pre; line-height: 1.2; text-shadow: none; font-size: 0.875rem;" data-i18n="firmware_update.content.event_log_placeholder" data-i18n-attr="placeholder"></textarea>
-            <label for='event_log' data-i18n="firmware_update.content.event_log"></label>
-        </div>
-    </div>
 
     <div class="modal fade" id="factory_reset_modal" tabindex="-1" role="dialog" aria-hidden="true">
         <div id="factory_reset_content" class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
