--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -28,7 +28,7 @@
                 </div>
                 <div id="firmware-progress" hidden>
                     <div class="form-progress mb-1">
-                        <div id="firmware-progress-bar" class="progress-bar form-control"
+                        <div id="firmware-progress-bar" class="progress-bar form-control progress-bar-no-transition"
                             role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
                             aria-valuemax="100"></div>
                     </div>
