--- a/software/modules/frontend/event_log/content.html
+++ b/software/modules/frontend/event_log/content.html
@@ -1,24 +1,34 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-event_log" id="event_log">
-    <div
-        class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 mb-3 border-bottom">
-        <h1 class="h2" data-i18n="event_log.content.event_log"></h1>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+        <span class="h2" data-i18n="event_log.content.event_log"></span>
     </div>
+
     <div class="form-group row">
-        <div class="col-xl-7 col-lg-9 col-md-12">
-            <textarea class="text-monospace mb-1 form-control" placeholder="Event-Log..." readonly id="event_log_content" rows="20" style="width: 100%; white-space: pre; line-height: 1.2; text-shadow: none; font-size: 0.875rem;" data-i18n="event_log.content.event_log_placeholder" data-i18n-attr="placeholder"></textarea>
-            <label for='event_log_content' data-i18n="event_log.content.event_log" class="mb-3"></label>
+        <div class="col-lg-3 col-xl-2">
+            <label class="col-form-label">
+                <span class="form-label pr-2" data-i18n="event_log.content.event_log_desc"></span>
+                <span class="text-muted" data-i18n="event_log.content.event_log_desc_muted"></span>
+            </label>
         </div>
-        <div class="col-md-12 col-lg-3">
-            <!--<a id="save_event_log" href="/event_log" class="form-control btn btn-primary mb-1" data-i18n="event_log.content.save_event_log" download="event_log.txt"></a>
-            <label for='save_event_log' data-i18n="event_log.content.save_event_log_desc" class="mb-3"></label>-->
+        <div class="col-lg-9 col-xl-6">
+            <textarea class="text-monospace mb-1 form-control" placeholder="Event-Log..." readonly id="event_log_content" rows="20" style="resize: both; width: 100%; white-space: pre; line-height: 1.2; text-shadow: none; font-size: 0.875rem;" data-i18n="event_log.content.event_log_placeholder" data-i18n-attr="placeholder"></textarea>
+        </div>
+    </div>
+
+    <div class="form-group row">
+        <div class="col-lg-3 col-xl-2">
+            <label class="col-form-label">
+                <span class="form-label pr-2" data-i18n="event_log.content.debug_report_desc"></span>
+                <span class="text-muted" data-i18n="event_log.content.debug_report_desc_muted"></span>
+            </label>
+        </div>
+        <div class="col-lg-9 col-xl-6">
             <button type="button" id="download_debug_report" class="form-control btn btn-primary mb-1 d-flex align-items-center justify-content-center">
                 <span data-i18n="event_log.content.debug_report" class="mr-2"></span>
                 <span id="debug_report_spinner" class="spinner-border spinner-border-sm" role="status" hidden>
                     <span class="sr-only">Loading...</span>
                 </span>
             </button>
-            <label for='debug_report' data-i18n="event_log.content.debug_report_desc"></label>
         </div>
-
     </div>
 </div>
